--- a/myApp/package.json
+++ b/myApp/package.json
@@ -2,12 +2,12 @@
   "name": "stackathon",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Audrey Maldonado",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "electron": "^15.0.0"
